[skip ci] WIP - expose updated columns to beginMerge